# rust-nginx

./: .dockerignore  .gitignore  Cargo.toml
.cargo/: config.toml
docker/: Dockerfile  docker-compose.yml
examples/ngx-upstream-module/: Cargo.toml
examples/ngx-upstream-module/src/: lib.rs
ngx-build/: Cargo.toml
ngx-build/src/: binding.rs  builder.rs  configure.rs  error.rs  lib.rs  make.rs  run.rs
ngx-derive/: Cargo.toml
ngx-derive/src/: callback.rs  handler.rs  lib.rs  module.rs
ngx-mod/: Cargo.toml
ngx-mod-derive/: Cargo.toml
ngx-mod-derive/src/: conf.rs  extract.rs  lib.rs  module.rs  util.rs
ngx-mod-derive/src/conf/: args.rs  directive.rs  expand.rs  field.rs  mod.rs  off.rs  set.rs  struct.rs  ty.rs
ngx-mod/examples/: __init__.robot  awssig.conf  awssig.robot  awssig.rs  curl.conf  curl.robot  curl.rs  httporigdst.conf  httporigdst.robot  httporigdst.rs  httporigdst.sh  nginx.resource  otel.conf  otel.gdb  otel.rs  requirements.txt  upstream.conf  upstream.gdb  upstream.robot  upstream.rs
ngx-mod/src/: conf.rs  lib.rs  merge.rs  module.rs
ngx-mod/src/core/: cmd.rs  mod.rs  module.rs
ngx-mod/src/http/: cmd.rs  mod.rs  module.rs
ngx-mod/src/stream/: mod.rs  module.rs
ngx-mod/tests/: compile_error.rs  conf.rs  core.rs  core_module.rs  http.rs  http_module.rs  module.rs  set.rs  stream.rs  stream_module.rs
ngx-mod/tests/compile_error/: module_empty.rs  module_empty.stderr  module_without_asso_types.rs  module_without_asso_types.stderr  module_without_http_module.rs  module_without_http_module.stderr
ngx-rt/: Cargo.toml
ngx-rt-derive/: Cargo.toml
ngx-rt-derive/src/: callback.rs  handler.rs  lib.rs  util.rs
ngx-rt/src/: error.rs  lib.rs  macros.rs  raw.rs
ngx-rt/src/core/: array.rs  buf.rs  cmd.rs  conf.rs  conn.rs  cycle.rs  err.rs  file.rs  hash.rs  kv.rs  list.rs  log.rs  mod.rs  module.rs  parse.rs  pool.rs  rbtree.rs  shm.rs  size.rs  status.rs  str.rs  time.rs
ngx-rt/src/core/conf/: conf.rs  enum.rs  file.rs  log.rs  mod.rs  open_file.rs  unset.rs
ngx-rt/src/event/: conn.rs  evt.rs  mod.rs  timer.rs
ngx-rt/src/http/: conf.rs  header.rs  log.rs  mod.rs  module.rs  req.rs  var.rs
ngx-rt/src/http/core/: loc.rs  main.rs  mod.rs  module.rs  srv.rs
ngx-rt/src/http/req/: body.rs  ctx.rs  headers_in.rs  headers_out.rs  method.rs  mod.rs  request.rs
ngx-rt/src/http/script/: code.rs  compile.rs  engine.rs  mod.rs  value.rs
ngx-rt/src/http/upstream/: conf.rs  mod.rs  module.rs  peer.rs  upstream.rs
ngx-src/: Cargo.toml  build.rs
ngx-src/src/: lib.rs
ngx-sys/: Cargo.toml  build.rs  gen.sh  nginx.h
ngx-sys/src/: bindings.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
