[package]
name = "ngx-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gen = ["bindgen"]

[dependencies]
pathdiff = "0.2"
thiserror = "1.0"
tracing = "0.1"

bindgen = { version = "0.68", optional = true }
