[package]
name = "ngx-mod-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["event", "http", "stream"]

event = []
http = []
stream = []
mail = []

[dependencies]
case = "1.0"
cfg-if = "1.0"
merge = "0.1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
structmeta = "0.2"
syn = "2.0"
