[package]
name = "ngx-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["event", "http", "stream"]

event = ["ngx-rt/event", "ngx-mod-derive/event"]
http = ["ngx-rt/http", "ngx-mod-derive/http"]
stream = ["ngx-rt/stream", "ngx-mod-derive/stream"]
mail = ["ngx-rt/mail", "ngx-mod-derive/mail"]

# optional features for derive compile testing

compile_error = []

# optional features for build

static-link = ["ngx-rt/static-link"]

[dependencies]
bitflags = "2.4"
foreign-types = "0.5"
memoffset = "0.9"

ngx-rt = { version = "0.1", path = "../ngx-rt" }
ngx-mod-derive = { version = "0.1", path = "../ngx-mod-derive" }

[dev-dependencies]
anyhow = "1.0"
cfg-if = "1.0"
doc-comment = "0.3"
trybuild = "1"
merge = "0.1"

[[example]]
name = "upstream"
crate-type = ["dylib"]
