[package]
name = "ngx-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stable", "fetch", "build", "base"]

mainline = ["v1_25"]
stable = ["v1_24"]
legacy = ["v1_22"]

v1_25 = []
v1_24 = []
v1_22 = []

minimal = ["compat", "threads"]

base = [
    "minimal",

    "http_addition",
    "http_auth_request",
    "http_flv",
    "http_gunzip",
    "http_gzip_static",
    "http_random_index",
    "http_realip",
    "http_secure_link",
    "http_slice",
    "http_ssl",
    "http_stub_status",
    "http_sub",
    "http_v2",

    "stream_realip",
    "stream_ssl_preread",
    "stream_ssl",
    "stream",
]

compat = []
stream = []
threads = []
file-aio = []

http_addition = []
http_auth_request = []
http_flv = []
http_gunzip = []
http_gzip_static = []
http_random_index = []
http_realip = []
http_secure_link = []
http_slice = []
http_ssl = []
http_stub_status = []
http_sub = []
http_v2 = []
stream_realip = []
stream_ssl = []
stream_ssl_preread = []

geoip = ["http_geoip", "stream_geoip"]

http_geoip = []
stream_geoip = []

full = [
    "base",
    "geoip",

    "http_dav",
    "http_degradation",
    "http_image_filter",
    "http_mp4",
    "http_perl",
    "http_v3",
    "http_xslt",
]

http_dav = []
http_degradation = []
http_image_filter = []
http_mp4 = []
http_perl = []
http_v3 = []
http_xslt = []

mail = []

fetch = ["reqwest"]
build = ["ngx-build"]

[dependencies]

[build-dependencies]
anyhow = "1.0"
cfg-if = "1.0"
cargo-emit = "0.2"
libflate = "2.0"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
tar = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"

ngx-build = { version = "0.1", path = "../ngx-build", optional = true }
