[package]
name = "ngx-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stable", "fetch", "build", "base"]

mainline = ["v1_25"]
stable = ["v1_24"]
legacy = ["v1_22"]

v1_25 = []
v1_24 = []
v1_22 = []

minimal = ["compat", "event", "threads"]

base = [
    "minimal",

    "http_addition",
    "http_auth_request",
    "http_flv",
    "http_gunzip",
    "http_gzip_static",
    "http_random_index",
    "http_realip",
    "http_secure_link",
    "http_slice",
    "http_ssl",
    "http_stub_status",
    "http_sub",
    "http_v2",

    "stream_realip",
    "stream_ssl_preread",
    "stream_ssl",
]

compat = []
threads = []
file-aio = []

event = []
http = []
mail = []
stream = []

http_addition = ["http"]
http_auth_request = ["http"]
http_flv = ["http"]
http_gunzip = ["http"]
http_gzip_static = ["http"]
http_random_index = ["http"]
http_realip = ["http"]
http_secure_link = ["http"]
http_slice = ["http"]
http_ssl = ["http"]
http_stub_status = ["http"]
http_sub = ["http"]
http_v2 = ["http"]
stream_realip = ["stream"]
stream_ssl = ["stream"]
stream_ssl_preread = ["stream"]

geoip = ["http_geoip", "stream_geoip"]

http_geoip = []
stream_geoip = []

full = [
    "base",
    "geoip",

    "http_dav",
    "http_degradation",
    "http_image_filter",
    "http_mp4",
    "http_perl",
    "http_v3",
    "http_xslt",

    "mail",
]

http_dav = ["http"]
http_degradation = ["http"]
http_image_filter = ["http"]
http_mp4 = ["http"]
http_perl = ["http"]
http_v3 = ["http"]
http_xslt = ["http"]

fetch = ["reqwest"]
build = ["ngx-build"]
static-lib = ["build"]

[dependencies]

[build-dependencies]
anyhow = "1.0"
cc = "1.0"
cfg-if = "1.0"
cargo-emit = "0.2"
libflate = "2.0"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
tar = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"

ngx-build = { version = "0.1", path = "../ngx-build", optional = true }
