[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
build-info = "*"
cargo_metadata = "0.18"
clap = { version = "4.4", features = ["derive"] }
fs_extra = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
build-info-build = { version = "*", default-features = false }
