[package]
name = "ngx-upstream-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
merge = "0.1"
foreign-types = "0.5"

ngx-mod = { version = "0.1", path = "../../ngx-mod" }
